--- a/gala darbs/main.css
+++ b/gala darbs/main.css
@@ -6,11 +6,14 @@
 }
 
 .beigubloks {
-    position: absolute;
     bottom: 0;
     width: 100%;
     height: 50px;
     background-color: grey;
     text-align: left;
     line-height: 50px;
+}
+
+.carousel-inner {
+    height: 600px;
 }
