--- a/gala darbs/main.css
+++ b/gala darbs/main.css
@@ -5,15 +5,34 @@
     
 }
 
-.beigubloks {
+.footeris {
+    position: fixed;
     bottom: 0;
     width: 100%;
-    height: 50px;
+    height: 40px;
     background-color: grey;
-    text-align: left;
-    line-height: 50px;
+    
+
 }
 
-.carousel-inner {
-    height: 600px;
+.container.konteineris1 {
+    max-width: 100%;
 }
+div#carouselExampleIndicators {
+    display: block;
+    min-width: 100%;
+    max-height: 500x;
+}
+.carousel-inner {
+    max-height: 500px;
+}
+
+/* .carousel-inner > .carousel-item > img {
+    width: 100%;
+    height:500px;
+  } */
+/* 
+  .container {
+    width: 100%;
+  } */
+
